--- a/data/raw_data_to_gml.ipynb
+++ b/data/raw_data_to_gml.ipynb
@@ -6,30 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Networks\n",
     "import igraph as ig\n",
-    "import louvain\n",
-    "#import networkx as nx\n",
-    "# Computation\n",
-    "import numpy as np\n",
-    "np.random.seed(0)\n",
-    "import scipy\n",
-    "import random\n",
-    "random.seed(0)\n",
-    "\n",
-    "# Data\n",
-    "import pandas as pd\n",
     "import csv\n",
-    "\n",
-    "# Plotting\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from matplotlib.ticker import PercentFormatter\n",
-    "\n",
-    "import sys\n",
-    "\n",
-    "import plotly\n",
-    "import plotly.plotly as py"
+    "import sys"
    ]
   },
   {
@@ -40,7 +19,7 @@
    "source": [
     "def read_file(name):\n",
     "    lista=[]\n",
-    "    f = open(\"./data/file_to_metro/\"+name+\".txt\", \"r\")\n",
+    "    f = open(\"./raw_data/metro/\"+name+\".csv\", \"r\")\n",
     "    for i in f:\n",
     "        tmp=i.replace('\"','')\n",
     "        tmp=tmp.rstrip()\n",
@@ -49,7 +28,7 @@
     "\n",
     "def read_csv(name):\n",
     "    lista=[]\n",
-    "    f = open(\"./data/csv/\"+name+\".csv\", \"r\")\n",
+    "    f = open(\"./raw_data/\"+name+\".csv\", \"r\")\n",
     "    for i in f:\n",
     "        tmp=i.replace('\"','')\n",
     "        tmp=tmp.rstrip()\n",
@@ -4311,7 +4290,7 @@
     }
    ],
    "source": [
-    "ig.plot(g_t)"
+    "#ig.plot(g_t)"
    ]
   },
   {
@@ -4320,7 +4299,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g_t.save(\"./data/graph/tram.gml\" ,format=\"gml\")"
+    "g_t.save(\"./graphs/tram.gml\" ,format=\"gml\")"
    ]
   },
   {
@@ -4428,7 +4407,7 @@
     "for i in degree:\n",
     "    if i ==0:\n",
     "        cont+=1 \n",
-    "print(cont)"
+    "#print(cont)"
    ]
   },
   {
@@ -4449,7 +4428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g_b.save(\"./data/graph/bus.gm\" ,format=\"gml\")"
+    "g_b.save(\"./graphs/bus.gml\" ,format=\"gml\")"
    ]
   },
   {
@@ -4466,7 +4445,7 @@
     "header_routes=routes[0]\n",
     "del routes[0]\n",
     "\n",
-    "metropolitana=read_file(\"metropolitana\")\n",
+    "metropolitana=read_file(\"metro_complete\")\n",
     "for m in metropolitana:\n",
     "    tmp=m[2].split(' ')\n",
     "    if tmp[0]=='LOTTO':\n",
@@ -4596,27 +4575,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g.save(\"./data/graph/metro.gm\" ,format=\"gml\")"
+    "g.save(\"./graphs/metro.gml\" ,format=\"gml\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": ".ven",
    "language": "python",
-   "name": "python2"
+   "name": ".ven"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15rc1"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
