add attacks edges

--- a/attacks.ipynb
+++ b/attacks.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,6 +156,14 @@
     "            davg_dic[i]=degree[str(i)]\n",
     "    return davg_dic\n",
     "\n",
+    "def list_edge_betweenness(G):\n",
+    "    edge={}\n",
+    "    edges_list=list(G.edges())\n",
+    "    edge_betweenness=nx.edge_betweenness_centrality(G, normalized=True, weight='weight')\n",
+    "    for i in edge_betweenness.keys():\n",
+    "        edge[i]=edge_betweenness[i]\n",
+    "    return edge\n",
+    "\n",
     "#crea una lista ordinata in modo decrescente\n",
     "def ranking_nodes(measure):\n",
     "    tmp= sorted_x = sorted(measure.items(), key=lambda kv: kv[1])\n",
@@ -166,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,6 +281,49 @@
     "        if len(G.nodes) ==1:\n",
     "            return S\n",
     "    \n",
+    "    return S\n",
+    "\n",
+    "def set_rank_attack_edge(G,ranking,dimension):\n",
+    "    N=nx.number_of_nodes(G)\n",
+    "    S=[100]\n",
+    "    #esegue gli attacchi\n",
+    "    for i in range(dimension):\n",
+    "        #archi della max componente connessa \n",
+    "        edges =list(G.edges)\n",
+    "        \n",
+    "        #prende max edge presente nella componente connessa\n",
+    "        if len(edges) < 3:\n",
+    "            S.append(0)\n",
+    "            return S\n",
+    "        node1,node2=next(x for x in ranking if x in edges)\n",
+    "        G.remove_edge(node1,node2)\n",
+    "        \n",
+    "        #prende nuova max componente connessa\n",
+    "        G = max(nx.connected_component_subgraphs(G), key=len)\n",
+    "        S.append((float(nx.number_of_nodes(G))/N)*100)\n",
+    "        if len(G.edges) == 1:\n",
+    "            return S        \n",
+    "    return S\n",
+    "\n",
+    "def update_rank_attack_edge(G,dimension):\n",
+    "    N=nx.number_of_nodes(G)\n",
+    "    S=[100]\n",
+    "   \n",
+    "    #esegue gli attacchi\n",
+    "    for i in range(dimension):\n",
+    "        centrality=list_edge_betweenness(G)\n",
+    "        \n",
+    "        if ranking_nodes(centrality) == []:\n",
+    "            S.append(0)\n",
+    "            return S\n",
+    "        node1,node2=ranking_nodes(centrality)[0]\n",
+    "        \n",
+    "        G.remove_edge(node1,node2)\n",
+    "        #prende nuova max componente connessa\n",
+    "        G = max(nx.connected_component_subgraphs(G), key=len)\n",
+    "        S.append((float(nx.number_of_nodes(G))/N)*100)\n",
+    "        if len(G.edges) == 1:\n",
+    "            return S\n",
     "    return S"
    ]
   },
@@ -332,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +395,7 @@
        "<chart_studio.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +449,7 @@
        "<chart_studio.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,12 +496,18 @@
     "\n",
     "c2c = nx.read_gml(\"./data/graphs/net_c2c.gml\")\n",
     "rank_cluster=ranking_nodes(clustering)\n",
-    "R5=set_rank_attack(c2c,rank_cluster,40)"
+    "R5=set_rank_attack(c2c,rank_cluster,40)\n",
+    "\n",
+    "#list edge_betweenness\n",
+    "c2c = nx.read_gml(\"./data/graphs/net_c2c.gml\")\n",
+    "edge_bet=list_edge_betweenness(c2c)\n",
+    "rank_edge_bet=ranking_nodes(edge_bet)\n",
+    "R6=set_rank_attack_edge(c2c,rank_edge_bet,len(c2c.edges))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +519,7 @@
        "<chart_studio.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,30 +563,24 @@
     "    mode = 'lines',\n",
     "    name = 'clustering_i'\n",
     ")\n",
-    "data = [trace0,trace1,trace2,trace3,trace4,trace5]\n",
+    "trace6 = go.Scatter(\n",
+    "    x = range(1,100),\n",
+    "    y = R6,\n",
+    "    mode = 'lines',\n",
+    "    name = 'edge_betweenness_i'\n",
+    ")\n",
+    "data = [trace0,trace1,trace2,trace3,trace4,trace5,trace6]\n",
     "\n",
     "py.iplot(data, filename='line-mode')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 128,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "update_rank_attack() takes exactly 4 arguments (3 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-39-b148a0f6b319>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mc2c\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_gml\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./data/graphs/net_c2c.gml\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mU\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mupdate_rank_attack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc2c\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'degree'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mc2c\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_gml\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./data/graphs/net_c2c.gml\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mU1\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mupdate_rank_attack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc2c\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m40\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'closeness'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mc2c\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_gml\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"./data/graphs/net_c2c.gml\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: update_rank_attack() takes exactly 4 arguments (3 given)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c2c = nx.read_gml(\"./data/graphs/net_c2c.gml\")\n",
     "U=update_rank_attack(c2c,40,'degree')\n",
@@ -542,12 +593,16 @@
     "c2c = nx.read_gml(\"./data/graphs/net_c2c.gml\")\n",
     "U4=update_rank_attack(c2c,40,'pagerank')\n",
     "c2c = nx.read_gml(\"./data/graphs/net_c2c.gml\")\n",
-    "U5=update_rank_attack(c2c,40,'clustering')"
+    "U5=update_rank_attack(c2c,40,'clustering')\n",
+    "\n",
+    "#update list edge_betweenness\n",
+    "c2c = nx.read_gml(\"./data/graphs/net_c2c.gml\")\n",
+    "U6=update_rank_attack_edge(c2c,len(c2c.edges))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +614,7 @@
        "<chart_studio.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,14 +658,20 @@
     "    mode = 'lines',\n",
     "    name = 'clustering'\n",
     ")\n",
-    "data = [trace0,trace1,trace2,trace3,trace4,trace5]\n",
+    "trace6 = go.Scatter(\n",
+    "    x = range(1,100),\n",
+    "    y = U5,\n",
+    "    mode = 'lines',\n",
+    "    name = 'clustering'\n",
+    ")\n",
+    "data = [trace0,trace1,trace2,trace3,trace4,trace5,trace6]\n",
     "\n",
     "py.iplot(data, filename='line-mode')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +765,7 @@
        "<chart_studio.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +843,7 @@
        "<chart_studio.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +951,7 @@
        "<chart_studio.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1009,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
